--- a/_layouts/_main.twig
+++ b/_layouts/_main.twig
@@ -1,4 +1,4 @@
-{% extends "_layouts/_base" %}
+{% extends "_settings" %}
 {% block website %}
   <!doctype html>
   <html class="no-js" lang="{{ currentSite.language }}">
