--- a/zurb/_00-atoms/link.twig
+++ b/zurb/_00-atoms/link.twig
@@ -21,7 +21,7 @@
     id: 'messageCount',
     title: 'title text',
     target: '_blank',
-    rel: 'nofollow, ugc, sponsored'
+    rel: 'nofollow, ugc, sponsored',
    }
  } %}
 
