--- a/_layouts/pageWrapper.twig
+++ b/_layouts/pageWrapper.twig
@@ -14,7 +14,7 @@
   </article>
   {% if craft.app.request.segments|last == 'contact-us' %}
     {% include '_vendor/gmaps' with {
-      googleApi : 'AIzaSyANCUTHyJQqnXHmDnQ77zTMvZ0bRa8jS8o',
+      googleApi : 'xxx',
       lat: contactInfo.latitude,
       long: contactInfo.longitude,
       size: '400'
