--- a/_layouts/base.twig
+++ b/_layouts/base.twig
@@ -7,7 +7,7 @@
 {%- header "Referrer-Policy: no-referrer" -%}
 {#- DEFAULT CSS ----#}
 {% css '/css/app.css' %}
-{#- DEFAULT JS ----#}
+{#- DEFAULT JS ----xx#}
 {% js '/js/min/app.min.js' %}
 {% js '//ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js' %}
 {% js %}
