--- a/zurb/_00-atoms/menu.twig
+++ b/zurb/_00-atoms/menu.twig
@@ -6,24 +6,27 @@
  * Available variables:
  * - menu_attributes: array - class, id, etc.
  * - zurb class options: default: menu + align-right, align-center, expanded, vertical, simple
- * - menu_items: array of links and urls
+ * - menuItems: array of links and urls
  *
  * Code example
- * GET SOME ARRAY {{ someArray }}
- {% include '_00-atoms/menu' with {
+ {% set menuItems = [
+    {'text':'ABOUT', 'title':'About Sugar\'s Ribs','url':url('about')},
+    {'text':'MENU', 'title':'Sugar\'s Ribs\' Menu','url':url('menu')}
+    ] %}
+ {% include 'zurb/_00-atoms/menu' with {
    menu_attributes: {
     class: ['menu']
    },
-   menu_items: someArray
+   menu_items: menuItems
  } %}
 
  */
 #}
 
 <ul{{ attr(menu_attributes) }}>
-  {% for item in menu_items %}
-    <li>
-      <a href="{{ url(item.url) }}" title="{{ item.title }}">{{ item.title }}</a>
-    </li>
-  {% endfor %}
+    {% for item in menu_items %}
+        <li>
+            <a href="{{ url(item.url) }}" title="{{ item.title }}">{{ item.text }}</a>
+        </li>
+    {% endfor %}
 </ul>
